v1.1 is here! Check CHANGELOG.md