@@ -2,23 +2,23 @@ package cz.thepatik.welcomeplugin.utils;
 
 import org.bukkit.plugin.java.JavaPlugin;
 
+import javax.print.URIException;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.*;
 
 public class Updater {
-    private JavaPlugin plugin;
+    private final JavaPlugin plugin;
     private int project = 0;
     private String newVersion;
     private URL checkURL;
+
     public Updater(JavaPlugin plugin, int projectID){
         this.plugin = plugin;
         this.project = projectID;
         try {
-            this.checkURL = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + projectID);
-        }catch (MalformedURLException e){
+            this.checkURL = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + projectID).toURL();
+        }catch (Exception e){
             plugin.getLogger().severe("There was a problem with updater: " + e);
         }
     }
@@ -26,12 +26,15 @@ public class Updater {
     public String getPluginVersion(){
         return plugin.getDescription().getVersion();
     }
+
     public int getProjectID(){
         return project;
     }
+
     public String getResourceURL(){
         return "https://www.spigotmc.org/resources/" + project;
     }
+
     public boolean checkForUpdates() {
         try {
             URLConnection con = checkURL.openConnection();
@@ -41,6 +44,7 @@ public class Updater {
         }
         return plugin.getDescription().getVersion().equals(newVersion);
     }
+
     public String getNewVersion(){
         try {
             URLConnection con = checkURL.openConnection();
